--- a/twocolumn2 - ivy corridor.html
+++ b/twocolumn2 - ivy corridor.html
@@ -66,30 +66,30 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Grand piano</h2>
+								<h2>Couloir</h2>
 							</header>
 							<p>En écoutant une musique avec du piano j'ai eu l'idée de modéliser un piano  à queue.</p>
 							
 							<p>Lors de la modélisation j'ai rencontrer quelques problèmes pour la modélisation de l'intérieur d'un paino, de ce fais celui-ci manque de réalisme. Cependant c'est un projet qui m'as permis de crée un objets qui pourra être réutiliser lors d'aménagement d'intérieur de bâtiments.</p>
-							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio.</p>
-							<p><Strong>Année de réalisation</Strong> : automne 2015.</p>
-							<a href="#" class="image full"><img src="images/Grand piano3.jpg" alt=""></a>
+							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio avec le plugins GrowIvy de guruware.</p>
+							<p><Strong>Année de réalisation</Strong> : hiver 2016.</p>
+							<a href="#" class="image full"><img src="images/couloir_ivy_3.jpg" alt=""></a>
 							
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Image sur internet</h2>
+								<h2>Screenshot des hidden lines</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/KEM-KC151-GRAND-PE.jpg" alt=""></a>
-							<p>Image d'un grand piano trouver sur internet dont je me suis inspirer.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/scene_ivy.jpg" alt=""></a>
+							<p>Sur cette prise d'écran on peut voir les lignes des différents volumes ayant servi à réaliser la scène.</p>
 						</section>
 						<section>
 							<header>
-								<h2>piano modéliser</h2>
+								<h2>Screenshot sous un autre angle</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/Grand piano2.jpg" alt=""></a>
-							<p>Modélisation du piano.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/hiddenline_ivy.jpg" alt=""></a>
+							<p>Cette scène est faite pour être vu avec l'angle de la caméra uniquement, si on change l'angle, on se rend compte que la scène n'est pas compléte.</p>
 						</section>
 					</div>
 				</div>
