Changement d'article, corridor ivy

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Scène Abstraite</h2>
+							<h2>Couloir abandonné</h2>
 						</header>
-						<a href="onecolumn - abstrait.html" class="image full"><img src="images/reduit_moitier/abstrait tori reduit_moitier.jpg" alt=""></a>
-						<p>Scène abstraite avec un thème sur le japon.</p>
-						<a href="onecolumn - abstrait.html" class="button">En savoir plus...</a>
+						<a href="twocolumn2 - ivy corridor.html" class="image full"><img src="images/reduit_moitier/couloir_ivy_3_petit.jpg" alt=""></a>
+						<p>Couloir de palais envahi de lierres.</p>
+						<a href="twocolumn2 - ivy corridor.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
