corridor ivy texte

--- a/twocolumn2 - ivy corridor.html
+++ b/twocolumn2 - ivy corridor.html
@@ -66,13 +66,13 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Couloir</h2>
+								<h2>Couloir d'un palais abandonné</h2>
 							</header>
-							<p>En écoutant une musique avec du piano j'ai eu l'idée de modéliser un piano  à queue.</p>
+							<p>Palais somptueux ou la nature reprend ses droit petit à petit.</p>
 							
-							<p>Lors de la modélisation j'ai rencontrer quelques problèmes pour la modélisation de l'intérieur d'un paino, de ce fais celui-ci manque de réalisme. Cependant c'est un projet qui m'as permis de crée un objets qui pourra être réutiliser lors d'aménagement d'intérieur de bâtiments.</p>
+							<p>Pour changer du style japonais je susi aller vers un style plus occidentale.</p>
 							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio avec le plugins GrowIvy de guruware.</p>
-							<p><Strong>Année de réalisation</Strong> : hiver 2016.</p>
+							<p><Strong>Année de réalisation</Strong> : janvier 2016.</p>
 							<a href="#" class="image full"><img src="images/couloir_ivy_3.jpg" alt=""></a>
 							
 					</div>
