ajout header des projets

--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
 						<p>  </p>
 						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
-						
+						<p>  </p>
+						<p>  </p>
+						<header>
+							<h2>Mes dernier projets :</h2>
+						</header>
 					</section>
 				</div>
 				<div class="row">
