ajout ivy galerie

--- a/Gallerie.html
+++ b/Gallerie.html
@@ -110,7 +110,7 @@
 							<a href="twocolumn1 - salle auberge.html" class="image full"><img src="images/reduit_moitier/salle auberge.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/reduit_moitier/" alt=""></a>
+							<a href="twocolumn2 - ivy corridor.html" class="image full"><img src="images/reduit_moitier/couloir_ivy_3_petit.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/reduit_moitier/" alt=""></a>
