--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 					</section>
 				</div>
 				<header>
+					<h2>     </h2>
+				</header>
+				<header>
 					<h2>Mes dernier projets :</h2>
 				</header>
 				<div class="row">
